# ace-playbook

./: .dockerignore  .gitignore  .markdownlint.json  .mutmut-config  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  docker-compose.yml  pyproject.toml
.benchmarks/Darwin-CPython-3.10-64bit/: 0001_baseline.json
.claude-flow/metrics/: system-metrics.json
.claude/commands/: speckit.implement.md
.github/workflows/: ace-benchmark.yml  weekly-self-improvement.yml
.specify/templates/: tasks-template.md
ace/: __init__.py  llm_client.py
ace/agent_learning/: __init__.py  datasets.py  exploration.py  guardrails.py  live_loop.py  policy.py  reflection.py  types.py  utils.py  world_model.py
ace/curator/: __init__.py  curator_models.py  curator_service.py  curator_utils.py  domain_validator.py  merge_coordinator.py  promotion_policy.py  semantic_curator.py
ace/generator/: __init__.py  context_builder.py  cot_generator.py  react_generator.py  signatures.py
ace/models/: __init__.py  playbook.py  review_queue.py
ace/ops/: __init__.py  dataset_loader.py  guardrails.py  metrics.py  offline_trainer.py  online_loop.py  refinement_scheduler.py  review_service.py  stage_manager.py
ace/reflector/: __init__.py  grounded_reflector.py  signatures.py
ace/repositories/: __init__.py  journal_repository.py  review_queue_repository.py
ace/runtime/: __init__.py  adaptation.py  client.py  metrics.py
ace/utils/: __init__.py  agent_feedback.py  circuit_breaker.py  database.py  embeddings.py  faiss_index.py  finance_guardrails.py  json_mode.py  llm_circuit_breaker.py  rate_limiter.py  tracing.py
alembic/versions/: 15d473f06957_add_playbook_archaeology_attribution_.py  16414e12b066_add_tool_learning_fields.py  4c0c6073b96e_initial_schema_with_all_tables.py
benchmarks/: RESULTS.md  agent_hard.jsonl  agent_small.jsonl  arithmetic_seed42.jsonl  finance_hard.jsonl  finance_subset.jsonl  run_live_loop_benchmark.py
benchmarks/data/: agent_feedback_config.json  sample_tasks.json
cc-obsd/: .gitignore
docs/: ENGINEERING_REVIEW.md  MIGRATION_COT_TO_REACT.md  MODEL_TRANSFER_ANALYSIS.md  MULTI_MODEL_DEPLOYMENT_GUIDE.md  OFFLINE_TRAINING.md  README.md  REVIEW_QUEUE.md  RUNBOOK.md  architecture.md  changelog.rst  combined_quickstart.md  conf.py  edge_cases.md  getting_started.rst  index.rst  onboarding.md  release_notes.md  runbook.rst  runtime_benchmarks.rst
docs/adr/: 0001-use-faiss-for-semantic-similarity.md  0002-append-only-playbook-updates.md  0003-circuit-breaker-for-llm-apis.md  0004-stage-based-promotion-gates.md  README.md
docs/api/: curator.rst  generator.rst  index.rst  models.rst  ops.rst  reflector.rst  repositories.rst  runner.rst  utils.rst
docs/domains/: index.rst
docs/tutorials/: 01-quick-start.rst  index.rst
examples/: arithmetic_learning.py  arithmetic_learning_dspy.py  arithmetic_learning_multiplication.py  batch_tool_learning.py  code_logic_validation.py  comprehensive_domain_validation.py  live_loop_quickstart.py  multi_domain_validation.py  multi_tool_orchestration.py  react_rag_agent.py  simple_demo.py  single_domain_arithmetic_validation.py
examples/multiplication_analysis/: README.md  __init__.py  ablation_study.py  difficulty_analysis.py  holdout_test.py  longer_training.py  model_transfer.py  run_all.sh  strategy_quality.py  test_format_hypothesis.py  test_llama_transfer.py
migrations/: add_review_queue.sql
results/: ace_full_agent_small.json  ace_full_arith.json  ace_full_finance_subset.json  baseline_agent_small.json  baseline_arith_seed42.json  baseline_finance_subset.json
results/benchmark/: ace_agent_hard.json  ace_finance.json  ace_finance_gt.json  ace_finance_hard_gt.json  ace_finance_hard_no_gt.json  ace_finance_hard_no_multiepoch.json  ace_finance_hard_no_reflector.json  ace_finance_hard_no_warmup.json  (+4 more)
scripts/: ace_review.py  audit_agent_scoring.py  consolidate_playbook.py  offline_train.py  run_arithmetic_demo.py  run_benchmark.py  run_mutation_tests.sh  scaffold_domain.py
tests/: conftest.py  test_database_isolation.py  test_generator.py  test_generator_integration.py  test_offline_training.py  test_promotion_gates.py  test_reflector.py  test_reflector_integration.py  test_semantic_curator.py  test_shadow_learning.py
(+34 files in other folders)
